@@ -10,6 +10,8 @@ Version 3.4 - in development
 - Deprecated the VARBLOCK format and rsa.bigfile module due to security issues, see
     https://github.com/sybrenstuvel/python-rsa/issues/13
 - Integration with Travis-CI [1] and Coveralls [2]
+- Deprecated the old rsa._version133 and rsa._version200 submodules, they will be
+  completely removed in version 4.0.
 - Fixed bugs #12, #14, #27, #30
 
 [1] https://travis-ci.org/sybrenstuvel/python-rsa
